--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3146,6 +3146,12 @@ nouislider{
             max-height: 178px !important;
         }
     }
+    &.h-189{
+        max-height: 189px;
+        .ps-content{
+            max-height: 189px !important;
+        }
+    }
     &.h-200{
         max-height: 200px;
         .ps-content{
