--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -235,7 +235,7 @@
               [hidden]="selectedStage.condition.type=='script'">
               <div class="conditions-types">
                 <div class="and-seperator" *ngIf="selectedStage.condition.mappings.length>1&&i>0">And</div>
-                <div class="kr-sg-input-text col-8">
+                <!-- <div class="kr-sg-input-text col-8">
                   <div class="position-relative">
                     <input type="text" placeholder="Enter the field name here" (keyup)="changesDetected = true"
                       class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown"
@@ -250,7 +250,31 @@
                       </perfect-scrollbar>
                     </ul>
                   </div>
+                </div> -->
+                <div class="kr-sg-dropdowns col-8" ngbDropdown   >
+                  <div class="dropdown dropdown-open">
+                    <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
+                      data-toggle="dropdown" ngbDropdownToggle (click)="clearcontent()" >
+                      {{basic_fieldName?basic_fieldName:"Choose field"}}
+                     </button>
+                     <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" style="overflow-y: hidden;"ngbDropdownMenu>
+                      <li class="search-box">
+                      <input id="searchBoxId"  autocomplete="off" type="text" [(ngModel)]="search_basic_fieldName"
+                      placeholder="Search" class="seach-input" autofocus />
+                      </li>
+                      <perfect-scrollbar class="scroll-search-field h-178">
+                      <ng-container >
+                      <li ngbDropdownItem *ngFor="let suggesition of fields | filter : [search_basic_fieldName, 'fieldName']"
+                      (click)="basic_fieldId=suggesition._id;basic_fieldName=suggesition.fieldName;addCondition('update',i,'field',suggesition._id);"
+                      [ngClass]="{'highlight':basic_fieldName == suggesition.fieldName}">
+                      {{ suggesition.fieldName }}
+                      </li>
+                      </ng-container>
+                      </perfect-scrollbar>
+                      </ul>
                 </div>
+                </div>
+
                 <div class="kr-sg-dropdowns col-4">
                   <div class="dropdown dropdown-open">
                     <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{basic.operator==''?'Select
@@ -655,24 +679,33 @@
 
                   </div>
                   <div class="drag_drop">
-                    <img src="assets/icons/drag_drop_move_icon.svg" />
+                    <img src="assets/icons/drag_drop_move_icon.svg"/>
                   </div>
-                  <div class="kr-sg-input-text col-6 input-box">
-                    <div class="label-text">{{'workbench.source_field' | translate}}</div>
-                    <div class="position-relative ">
-                      <input type="text" placeholder="{{'workbench.value' | translate}}"
-                        (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"
-                        data-toggle="dropdown" [(ngModel)]="map.source_field" />
-                      <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu"
-                        [ngClass]="{'no-data-match-border-0':!(fields | filter : [map.source_field, 'fieldName']).length}">
-                        <perfect-scrollbar class="scroll-search-field h-178">
-                          <li *ngFor="let suggesition of fields | filter : [map.source_field, 'fieldName'] "
-                            (click)="map.source_field = suggesition.fieldName"><a
-                              *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
-                        </perfect-scrollbar>
-                      </ul>
-                    </div>
-                  </div>
+                  <div class="kr-sg-dropdowns col-6" ngbDropdown>
+                             <div class="dropdown dropdown-open">
+                              <div class="label-text">{{'workbench.source_field' | translate}}</div>
+                               <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
+                                 data-toggle="dropdown" ngbDropdownToggle (click)="clearcontentSrc()">
+                                 {{map.source_field?map.source_field:"Choose field"}}
+                                </button>
+                                <ul class="dropdown-menu content-menu faq-filter-add col-12" style="overflow-y: hidden;" ngbDropdownMenu>
+                                 <li class="search-box">
+                                 <input id="searchBoxId1"  autocomplete="off" type="text" [(ngModel)]="search_basic_fieldName1"
+                                 placeholder="Search" class="seach-input" autofocus />
+                                 </li>
+                                 <perfect-scrollbar class="scroll-search-field h-178">
+                                 <ng-container >
+                                 <li ngbDropdownItem *ngFor="let suggesition of fields | filter : [search_basic_fieldName1, 'fieldName']"
+                                 (click)="map.source_fieldId=suggesition._id;map.source_field=suggesition.fieldName;;addCondition('update',i,'field',suggesition._id);"
+                                 [ngClass]="{'highlight':map.source_field == suggesition.fieldName}">
+                                 {{ suggesition.fieldName }}
+                                 </li>
+                                 </ng-container>
+                                 </perfect-scrollbar>
+                                 </ul>
+                           </div>
+                           </div>
+
                   <!-- adding d-none class to hide the Choose Model -->
                   <div class="kr-sg-dropdowns col-4 input-box d-none" *ngIf="selectedStage.type === 'semantic_meaning'">
                     <div class="label-text">{{'workbench.choose_model' | translate}}</div>
