--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -1985,7 +1985,7 @@
                       </ul> -->
                       <div class="label-text mb-1">{{'resultTemplate.image'|translate}}</div>
                       <div class="col-12 row ml-0 mr-0 mb-3 p-0 align-items-center right-side-sec">
-                        <div class="kr-sg-dropdowns col-12 pr-0" ngbDropdown (click)="clearcontentimage();" #imgDrop="ngbDropdown">
+                        <div class="kr-sg-dropdowns col-12 p-0" ngbDropdown (click)="clearcontentimage();" #imgDrop="ngbDropdown">
                           <div class="dropdown dropdown-open">
                             <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
                               [class.err-block]="((!(preview_img?.length) && submitted)||!(templateFieldValidateObj.image))"
