--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -331,7 +331,7 @@
     .form_sec {
       height: 100%;
       width: calc(100% - 261px);
-      padding: 25px 20px 0 30px;
+      padding: 25px 20px 0 20px;
       .label-text {
         color: #202124;
         font-size: 12px;
@@ -343,7 +343,7 @@
       }
       .scroll_form {
         height: calc(100% - 95px);
-        padding-right: 10px;
+        padding: 0 10px 0 0;
       }
       .form_edit_content {
         .add-condition-example-text {
@@ -366,7 +366,7 @@
           }
         }
         .condition-block {
-          margin: 20px 0 8px 0;
+          margin: 20px 0 8px 10px;
           button {
             img {
               height: 11px;
@@ -463,6 +463,7 @@
             }
             .input-box {
               padding: 0 25px 20px 0px;
+              margin-bottom: 6px;
             }
           }
           .add-condition-btn {
@@ -564,6 +565,7 @@
         }
       }
       .form_inputs_data {
+        padding: 0 10px;
         .main-heading {
           font-weight: 500;
           font-size: 12px;
@@ -1132,4 +1134,8 @@
 }
 .highlight {
   font-weight: bold;
+}
+
+.pl-10{
+  padding-left: 10px !important;
 }
